# fqlag

./: .copier-answers.yml  .gitignore  README  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: publish.yml  testing-and-coverage.yml
docs/: conf.py  index.rst
docs/notebooks/: data.lc  getting-started.ipynb
fqlag/: __init__.py  base.py  cxd.py  cxdf.py  misc.py  multi.py  pcxd.py  psd.py  psdf.py
simulations/: basic_run.py  sim_psd.py  sim_psdf.py  test_code.py
src/: .pylintrc
src/fqlag/: __init__.py  base.py  cxd.py  cxdf.py  misc.py  multi.py  pcxd.py  psd.py  psdf.py
tests/: test_base.py
tests/fqlag/: test_base.py  test_cxd.py  test_psd.py
tutorials/: getting-started.ipynb  getting-started.md  test.py
